# cpp-bazel-starter

./: .bazelrc  .gitignore  MODULE.bazel
.github/workflows/: ci.yml
main/: BUILD  hello-greet-test.cc  hello-world.cc
