bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "catch2", version = "3.13.0")
bazel_dep(name = "platforms", version = "0.0.10")

# -----------------------------------------------------------------------------
# Hermetic Clang / LLVM toolchain (Linux + macOS).
# Selected at build time via `--config=clang` (see .bazelrc), which passes
# `--extra_toolchains=@llvm_toolchain//:all`. Not registered by default so
# that a plain `bazel build` falls back to the autodetected host toolchain
# (useful on Windows where MSVC is picked up automatically).
# -----------------------------------------------------------------------------
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "20.1.6")
use_repo(llvm, "llvm_toolchain")

# -----------------------------------------------------------------------------
# Hermetic GCC toolchain (Linux only).
# Selected via `--config=gcc` in .bazelrc.
# -----------------------------------------------------------------------------
bazel_dep(name = "gcc_toolchain", version = "0.9.0")

gcc_toolchains = use_extension("@gcc_toolchain//toolchain:module_extensions.bzl", "gcc_toolchains")
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    target_arch = "x86_64",
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_aarch64",
    target_arch = "aarch64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64", "gcc_toolchain_aarch64")

# MSVC on Windows is provided by Bazel's built-in autodetected
# `@local_config_cc` toolchain -- no extra module setup is required.
