bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "catch2", version = "3.13.0")

# The C/C++ toolchain is whatever Bazel autodetects on the host:
#   - gcc or clang on Linux/macOS (selected via CC/CXX env vars)
#   - MSVC on Windows
# See .bazelrc for `--config=gcc|clang|msvc` warning presets.
